Fix clipping issue with backdrop filter

--- a/ianmtz/ianmtz/wwwroot/css/site.css
+++ b/ianmtz/ianmtz/wwwroot/css/site.css
@@ -14,6 +14,7 @@ body {
 
 .navbar {
     margin: 0;
+    z-index: 99;
 }
 
 .navbar-brand {
